Updated the HTML code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="Develop/assets/css/style.css">
     <title>Horiseon Website Services</title>
+    <meta name="viewport">
 </head>
 
 <body>
@@ -53,21 +54,21 @@
     <aside class="benefits"> <!--decided to use a aside class to specify the sidebar-->
         <section class="benefit-sidebar">
             <h3>Lead Generation</h3>
-            <img src="Develop/assets/images/lead-generation.png" alt="lead generation" />
+            <img src="./Develop/assets/images/lead-generation.png" alt="lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
           </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="Develop/assets/images/brand-awareness.png" alt="brand awareness" />
+            <img src="./Develop/assets/images/brand-awareness.png" alt="brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="Develop/assets/images/cost-management.png" alt="cost management" />
+            <img src="./Develop/assets/images/cost-management.png" alt="cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
