--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
        <div class="hero"></div>
     <main class="content"> <!--instead of a division class we added a main to specify the main content-->
-        <section id="search-engine-optimization"> <!--section tags felt like a better use for this layout-->
+        <section id="search-engine-optimization" class="search-engine-optimization"> <!--section tags felt like a better use for this layout-->
             <img src="Develop/assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
